--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -31,7 +31,7 @@ spec:
                   name: app-secret
                   key: db-pass
       nodeSelector:
-        zone: us-east-2a
+        zone: us-east-1
       volumes:
         - name: vpro-db-data
           awsElasticBlockStore:
