--- a/vprodbdep.yaml
+++ b/vprodbdep.yaml
@@ -31,11 +31,11 @@ spec:
                   name: app-secret
                   key: db-pass
       nodeSelector:
-        zone: us-east-2
+        zone: us-east-1a
       volumes:
         - name: vpro-db-data
           awsElasticBlockStore:
-            volumeID: vol-0caabcefd415c195e
+            volumeID: vol-0c7616bcd2fa19c7f
             fsType: ext4
 
       initContainers:
